--- a/src/App.css
+++ b/src/App.css
@@ -624,6 +624,10 @@ table td {
 	pointer-events: none;
 }
 
+.empty {
+  
+}
+
 /* ------------------------------------------------------ */
 /* -- Banner -- */
 
